# PhDArchive

./: CMakeLists.txt  README.md
data_set/: small_validation.ctset
librnary/: CMakeLists.txt
librnary/include/: read_cts.hpp
librnary/include/folders/: asymmetry_folder.hpp  stem_length_folder.hpp
librnary/include/models/: asymmetry_model.hpp  stem_length_model.hpp
librnary/include/scorers/: asymmetry_scorer.hpp  average_asym_scorer.hpp  stem_length_scorer.hpp
librnary/include/training/: IBF_multiloop_andronescu.hpp  IBF_multiloop_energy.hpp  IBF_multiloop_rmsefscore.hpp  generic_ibf_trainer.hpp
librnary/src/: read_cts.cpp
librnary/src/folders/: asymmetry_folder.cpp  stem_length_folder.cpp
librnary/src/models/: asymmetry_model.cpp  stem_length_model.cpp
librnary/src/scorers/: stem_length_scorer.cpp
librnary_tests/: CMakeLists.txt
librnary_tests/include/: paths.hpp  random.hpp  scorer_utils.hpp
librnary_tests/src/: aalberts_folder_tests.cpp  aalberts_model_tests.cpp  aalberts_scorer_tests.cpp  average_asym_folder_tests.cpp  average_asym_model_tests.cpp  energy_tests.cpp  main.cpp  multi_array_tests.cpp  multi_loop_tests.cpp  nn_affine_folder_tests.cpp  nn_affine_model_tests.cpp  nn_model_tests.cpp  nn_scorer_tests.cpp  nn_unpaired_folder_tests.cpp  nn_unpaired_model_tests.cpp  nussinov_folder_tests.cpp  parallel_tests.cpp  primary_tests.cpp  pseudoknot_removal_tests.cpp  random.cpp  rna_structure_tests.cpp  secondary_tests.cpp  ss_enumeration_tests.cpp  ss_tree_tests.cpp  statistics_tests.cpp  stem_length_tests.cpp
programs/: CMakeLists.txt
programs/src/: energy_aalberts.cpp  energy_avg_asym.cpp  energy_linear.cpp  energy_linear_asym.cpp  energy_logarithmic.cpp  energy_stem_length.cpp  fold_aalberts.cpp  fold_avg_asym.cpp  fold_linear.cpp  fold_linear_asym.cpp  fold_logarithmic.cpp  fold_stem_length.cpp  read_cts.cpp  train_aalberts.cpp  train_linear.cpp  train_linear_asymmetry.cpp  train_logarithmic.cpp  train_stem_length.cpp
